Standalone: Added support for "persistent" package.

--- a/nuitka/plugins/standard/anti-bloat.yml
+++ b/nuitka/plugins/standard/anti-bloat.yml
@@ -596,3 +596,7 @@ tensorboard:
     "load_ipython_extension": "'(lambda ipython: None)'"
   control_tags:
     - "allow_ipython"
+
+persistent._compat:
+  replacements:
+    "os.environ.get('PURE_PYTHON')": '''"1"'''
