--- a/nuitka/plugins/standard/implicit-imports.yml
+++ b/nuitka/plugins/standard/implicit-imports.yml
@@ -1,4 +1,6 @@
 ---
+# Spelling has no role in module names, spell-checker: disable
+
 # TODO: Seems too much
 lxml:
   depends:
@@ -102,4 +104,8 @@ dns.rdtypes:
 
 tensorflow:
   depends:
-    - "tensorflow.python.keras"
+    - ".python.keras"
+
+persistent.ring:
+  depends:
+    - "_cffi_backend"
