Plugins: Avoid plistlib usage in pkg_resources on non-macOS
* That is also avoids its dependencies like e.g. "xml.parsers.expat"
  that are also relatively big.

--- a/nuitka/plugins/standard/anti-bloat.yml
+++ b/nuitka/plugins/standard/anti-bloat.yml
@@ -602,3 +602,8 @@ persistent._compat:
   description: "use own compilation for compatibility"
   replacements:
     "os.environ.get('PURE_PYTHON')": '''"1"'''
+
+pkg_resources:
+  description: "avoid using plistlib dependency on non-macOS"
+  replacements:
+    "import plistlib": '''if sys.platform == "darwin": import plistlib'''
