Fix, "str.encode" with only errors was crashing the compilation.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,6 +115,7 @@
         "metaclass",
         "MSVC",
         "msys",
+        "Namify",
         "NBOOL",
         "noelf",
         "nofollow",
