User Manual: Describe how local Nuitka can be used with pyproject
* This is importing when working off git branches and downloads.

--- a/tests/distutils/example_pyproject_1/pyproject.toml
+++ b/tests/distutils/example_pyproject_1/pyproject.toml
@@ -18,7 +18,9 @@
 #     limitations under the License.
 #
 [build-system]
-requires = ["setuptools>=42", "wheel", "nuitka"]
+# TODO: Add the absolute path here through our testing framework, so we test
+# local Nuitka and not remote one.
+requires = ["setuptools>=42", "wheel", "nuitka", "toml"]
 build-backend = "nuitka.distutils.Build"
 
 [nuitka]
