--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,6 +104,7 @@
         "hotfixes",
         "idna",
         "importlib",
+        "inplace",
         "ipython",
         "isort",
         "Kivy",
@@ -115,6 +116,7 @@
         "metaclass",
         "MSVC",
         "msys",
+        "Mult",
         "Namify",
         "NBOOL",
         "noelf",
