Standalone: Added missing dependency of "wsgiref" module

--- a/nuitka/plugins/standard/implicit-imports.yml
+++ b/nuitka/plugins/standard/implicit-imports.yml
@@ -80,6 +80,10 @@ shelve:
   depends:
     - "dbm.dumb"
 
+wsgiref.simple_server:
+  depends:
+    - "http.server"
+
 shiboken6:
   depends:
     - "argparse"
