Tests: Enhanced pyproject test to run automatically

--- a/tests/distutils/example_pyproject_1/setup.cfg
+++ b/tests/distutils/example_pyproject_1/setup.cfg
@@ -18,10 +18,11 @@
 #     limitations under the License.
 #
 [metadata]
-name = nuitka-example-1
-version = 101
+name = nuitka-pyproject-example-1
+version = 102
 description = yadda yadda.
-long_description = Really long text here.
+long_description = "nuitka pyproject.toml test-case compiling a data-file using package"
+
 keywords = one, two
 author = Nobody really
 author_email = email@someplace.com
