--- a/tests/distutils/example_pyproject_1/pyproject.cpython.toml
+++ b/tests/distutils/example_pyproject_1/pyproject.cpython.toml
@@ -17,35 +17,4 @@
 #     See the License for the specific language governing permissions and
 #     limitations under the License.
 #
-[tool.poetry]
-version = "0.1.0"
-name = "hello-world-example"
-description = "Hello places and things"
-packages = [
-    {include = "src" },
-]
-keywords = [
-    "Hello",
-]
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: Other/Proprietary License",
-    "Operating System :: OS Independent"
-]
-authors = ["Nobody really <email@someplace.com>"]
-homepage = "https://www.nuitka.net"
-
-[tool.poetry.dependencies]
-python = "3.6.3"
-
-[tool.poetry.dev-dependencies]
-nuitka = "*"
-build = "*"
-
-[build-system]
-requires = ["setuptools>=42", "wheel", "nuitka", "toml"]
-build-backend = "nuitka.distutils.Build"
-
-[virtualenvs]
-create = true
-in-project = true
+# Nothing needed really it seems.
