Standalone: Added support for 'eliot' package

--- a/nuitka/plugins/standard/anti-bloat.yml
+++ b/nuitka/plugins/standard/anti-bloat.yml
@@ -615,3 +615,8 @@ zope.interface._compat:
     "_skip_under_py3k": "'(lambda test_method: None)'"
   control_tags:
     - "allow_unittest"
+
+eliot._traceback:
+  description: "avoid useless duplication of traceback module"
+  replacements:
+    'load_module(str("_traceback_no_io"), traceback)': '''__import__("traceback")'''
