--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -160,6 +160,7 @@
         "tshape",
         "ucrt",
         "uncompiled",
+        "unoptimized",
         "unstriped",
         "virtualenv",
         "vmprof",
