Python3.10+: Faster compilation with ordered-set installation
* For 3.10 or higher we now use a maintained package that works.

* Added warning if the fallback is used, as it's very slow in comparison due to
  heavy use that data structure in optimization.

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ appdirs
 tqdm; python_version == '2.7' or python_version >= '3.4'
 
 # Faster OrderedSet
+ordered-set; python_version >= "3.10"
 orderedset; python_version >= '3.6' or os.name != "nt"
 
 # More capable subprocess.
