--- a/nuitka/plugins/standard/implicit-imports.yml
+++ b/nuitka/plugins/standard/implicit-imports.yml
@@ -72,6 +72,10 @@ urllib.request:
   depends:
     - "http.client"
 
+http.client:
+  depends:
+    - "http.cookiejar"
+
 _asyncio:
   depends:
     - "asyncio"
