Standalone: Added implicit dependency for new "uvicorn"

--- a/nuitka/plugins/standard/implicit-imports.yml
+++ b/nuitka/plugins/standard/implicit-imports.yml
@@ -145,3 +145,7 @@ falcon.media.handlers:
 falcon.response:
   depends:
     - ".response_helpers"
+
+uvicorn.config:
+  depends:
+    - "websockets.legacy.server"
