Plugins: Massive data file improvements
* Added dedicated node for "pkg_resource.resource_stream"as well.

* More hard imports as needed for data files work.

* Added option to not include data files from the command line, can
  override plugins.

* Renamed option "--include-data-files" for clarity, covers multiple
  files normally.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,6 +106,7 @@
         "importlib",
         "inplace",
         "ipython",
+        "isgenerator",
         "isort",
         "Kivy",
         "libc",
