--- a/nuitka/plugins/standard/anti-bloat.yml
+++ b/nuitka/plugins/standard/anti-bloat.yml
@@ -42,8 +42,15 @@ sklearn.random_projection:
 
 sklearn.utils._testing:
   description: "remove pytest testing framework"
-  replacements:
-    "import pytest": "'raise ImportError'"
+  replacements_plain:
+    "import pytest": "raise ImportError"
+    "import unittest": ""
+    "from unittest import TestCase": ""
+    '_dummy = TestCase("__init__")': ""
+    "assert_raises = _dummy.assertRaises": "def assert_raises(*args, **kwargs): pass"
+    "assert_dict_equal = _dummy.assert_dict_equal": "def assert_dict_equal(*args, **kwargs): pass"
+    "assert_raises_regex = _dummy.assert_raises_regex": "def assert_dict_equal(*args, **kwargs): pass"
+    "unittest.case.SkipTest": "None"
 
 matplotlib:
   description: "remove setuptools and pytest testing framework reference"
