Windows: Added support for the "clr" module
* There was code for pywebview plugin, that was attributing it to
  the wrong package. The location is explained by "clr" being a
  module and not a package.

* Also uses config file avoiding special code for finding it.

--- a/nuitka/plugins/standard/dll-files.yml
+++ b/nuitka/plugins/standard/dll-files.yml
@@ -35,3 +35,12 @@ sklearn._distributor_init:
       patterns:
         - ""
       dest_path: "sklearn/.libs"
+
+clr:
+  dlls:
+    - include_from_filenames:
+      dir: "."
+      patterns:
+        "Python.Runtime"
+      dest_path:
+        "."
