Compatibility: Make sure our loader "find_spec" has proper original value
* Some packages, e.g. flash investigate this to find out things about
  the module ahead of time.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,7 @@
         "isgenerator",
         "isort",
         "Kivy",
+        "kwargs",
         "libc",
         "libpython",
         "lldb",
