Visual Code: Limit spell-checker to only our workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,6 @@
     "python.analysis.diagnosticSeverityOverrides": {
         "reportMissingImports": "none"
     },
-    "restructuredtext.confPath": "",
     "cSpell.words": [
         "abiflags",
         "appdirs",
@@ -172,4 +171,5 @@
     ],
     "esbonio.server.enabled": true,
     "esbonio.sphinx.confDir": "",
+    "cSpell.spellCheckOnlyWorkspaceFiles": true
 }
