--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "reportMissingImports": "none"
     },
     "cSpell.words": [
+        "__cplusplus",
         "abiflags",
         "appdirs",
         "asyncgen",
@@ -83,10 +84,12 @@
         "clangcl",
         "clcache",
         "closefd",
+        "co_firstlineno",
         "conda",
         "cpython",
         "ctypes",
         "Cython",
+        "Dejong",
         "devel",
         "distutils",
         "Doxygen",
@@ -100,6 +103,7 @@
         "girepository",
         "Gitter",
         "Hayen",
+        "HEDLEY",
         "hotfixes",
         "idna",
         "importlib",
@@ -109,12 +113,16 @@
         "isort",
         "Kivy",
         "kwargs",
+        "kwds",
         "libc",
         "libpython",
         "lldb",
         "LPWSTR",
         "lxml",
+        "mdef",
         "metaclass",
+        "METH_NOARGS",
+        "METH_VARARGS",
         "MSVC",
         "msys",
         "Mult",
@@ -136,12 +144,16 @@
         "Podman",
         "POSIX",
         "Py_ssize_t",
+        "Py_TPFLAGS",
+        "PYCORE",
         "pyenv",
+        "PyErr_WriteUnraisable",
         "pygsheets",
         "pylint",
         "pyproject",
         "pyqt",
         "pyside",
+        "PYSTATE",
         "pystone",
         "PYTHONHASHSEED",
         "PYTHONIOENCODING",
@@ -152,11 +164,14 @@
         "RPATH",
         "rpaths",
         "Scons",
+        "setattrofunc",
         "Setuptools",
         "sourcery",
         "stdlib",
         "sysflag",
         "Tkinter",
+        "tp_getattro",
+        "tp_setattro",
         "traceback",
         "tracebacks",
         "tshape",
