Tests: Make it explicit to compile only one

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -110,6 +110,8 @@
         "inplace",
         "ipython",
         "isgenerator",
+        "Py_XDECREF",
+        "ob_sval",
         "isort",
         "Kivy",
         "kwargs",
@@ -168,6 +170,7 @@
         "Setuptools",
         "sourcery",
         "stdlib",
+        "sysexit",
         "sysflag",
         "Tkinter",
         "tp_getattro",
