Fix, "dict.copy" could corrupt empty dictionary in the long run.
* Also the size allocated was not fully compatible and the
  spellings of some of the C code got cleaned up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
     },
     "cSpell.words": [
         "__cplusplus",
+        "_PyDict_NewPresized",
         "abiflags",
         "appdirs",
         "asyncgen",
@@ -84,7 +85,12 @@
         "clangcl",
         "clcache",
         "closefd",
+        "co_argcount",
         "co_firstlineno",
+        "co_kwonlyargcount",
+        "co_posonlyargcount",
+        "CO_VARKEYWORDS",
+        "co_varnames",
         "conda",
         "cpython",
         "ctypes",
@@ -100,6 +106,7 @@
         "EPEL",
         "finalizer",
         "FLUFL",
+        "frozenset",
         "girepository",
         "Gitter",
         "Hayen",
@@ -110,8 +117,6 @@
         "inplace",
         "ipython",
         "isgenerator",
-        "Py_XDECREF",
-        "ob_sval",
         "isort",
         "Kivy",
         "kwargs",
@@ -136,6 +141,7 @@
         "nosite",
         "Nuitka",
         "numpy",
+        "ob_sval",
         "onefile",
         "optipng",
         "organisation",
@@ -145,8 +151,12 @@
         "Pickler",
         "Podman",
         "POSIX",
+        "Py_DECREF",
+        "Py_INCREF",
         "Py_ssize_t",
         "Py_TPFLAGS",
+        "Py_XDECREF",
+        "Py_XINCREF",
         "PYCORE",
         "pyenv",
         "PyErr_WriteUnraisable",
@@ -163,6 +173,7 @@
         "redist",
         "reexecute",
         "repr",
+        "reprfunc",
         "RPATH",
         "rpaths",
         "Scons",
@@ -172,17 +183,29 @@
         "stdlib",
         "sysexit",
         "sysflag",
+        "ternaryfunc",
         "Tkinter",
+        "tp_basicsize",
+        "tp_dictoffset",
         "tp_getattro",
+        "tp_itemsize",
+        "tp_iternext",
+        "tp_richcompare",
         "tp_setattro",
+        "tp_vectorcall_offset",
+        "tp_weaklist",
+        "tp_weaklistoffset",
         "traceback",
         "tracebacks",
+        "traverseproc",
         "tshape",
         "ucrt",
         "uncompiled",
         "unoptimized",
         "unstriped",
+        "vectorcallfunc",
         "virtualenv",
+        "visitproc",
         "vmprof",
         "winlibs",
         "zstandard",
