--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -213,5 +213,8 @@
     ],
     "esbonio.server.enabled": true,
     "esbonio.sphinx.confDir": "",
-    "cSpell.spellCheckOnlyWorkspaceFiles": true
+    "cSpell.spellCheckOnlyWorkspaceFiles": true,
+    "yaml.schemas": {
+        ".vscode/config-yaml-schema.json": "config.yml"
+    }
 }
