--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,6 +115,7 @@
         "frozenset",
         "girepository",
         "Gitter",
+        "hashable",
         "Hayen",
         "HEDLEY",
         "hotfixes",
