Standalone: Added support for "torchvision".

--- a/nuitka/plugins/standard/dll-files.yml
+++ b/nuitka/plugins/standard/dll-files.yml
@@ -50,8 +50,8 @@ torchvision:
     - include_from_filenames:
       dir: "."
       patterns:
-        - "image"
+        - "zlib"
         - "libjpeg"
         - "libpng*"
       dest_path:
-        "."
+        "torchvision"
