--- a/nuitka/plugins/standard/implicit-imports.yml
+++ b/nuitka/plugins/standard/implicit-imports.yml
@@ -181,3 +181,7 @@ torch.onnx.symbolic_registry:
     - "torch.onnx.symbolic_opset12"
     - "torch.onnx.symbolic_opset14"
     - "torch.onnx.symbolic_opset15"
+
+torchvision.io.image:
+  depends:
+    - "torchvision.image"
