Standalone: Add missing DLL needed for tensorflow on non-Windows

--- a/nuitka/plugins/standard/dll-files.yml
+++ b/nuitka/plugins/standard/dll-files.yml
@@ -36,6 +36,14 @@ sklearn._distributor_init:
         - ""
       dest_path: "sklearn/.libs"
 
+tensorflow:
+  dlls:
+    - include_from_filenames:
+      dir: "core/platform"
+      patterns:
+        - "_cpu_feature_guard"
+      dest_path: "tensorflow/core/platform"
+
 clr:
   dlls:
     - include_from_filenames:
