Anti-bloat: Avoid more unwanted dependencies
* The "cffi.recompiler" package uses distutils, but we don't normally do that.

* The "pyparsing" uses "pdb" to allow breakpoints during
  parsing, we don't support that anyway.

* The "matplotlib" fulls in its web backend and "tornado" with it for IPython, which we don't normally need.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -330,12 +330,23 @@
     - description: "disable distutils hacks"
       replacements:
         "import setuptools": "'pass'"
+    - description: "disable distutils hacks"
+      change_function:
+        "get_extension": "un-callable"
+        "_build": "un-callable"
+      control_tags:
+        - "allow_cffi_recompiler"
 
 - module-name: "cffi.api"
   anti-bloat:
-    - description: "disable distutils extension build"
+    - description: "disable source recompile"
       change_function:
-        "distutils_extension": "'(lambda: None)'"
+        "emit_python_code": "un-callable"
+        "emit_c_code": "un-callable"
+        "compile": "un-callable"
+        "distutils_extension": "un-callable"
+      control_tags:
+        - "allow_cffi_recompiler"
 
 - module-name: "sklearn.random_projection"
   anti-bloat:
@@ -388,6 +399,14 @@
       change_function:
         "install_repl_displayhook": "'(lambda: None)'"
         "uninstall_repl_displayhook": "'(lambda: None)'"
+      control_tags:
+        - "allow_ipython"
+
+- module-name: "matplotlib.figure"
+  anti-bloat:
+    - description: "remove IPython reference"
+      change_function:
+        "_repr_html_": "un-callable"
       control_tags:
         - "allow_ipython"
 
@@ -1362,3 +1381,15 @@
   implicit-imports:
     depends:
       - "torchvision.image"
+
+- module-name: "pyparsing"
+  anti-bloat:
+    - description: "remove pdb usage"
+      change_function:
+        "setBreak": "'(lambda self: None)'"
+
+- module-name: "pkg_resources._vendor.pyparsing"
+  anti-bloat:
+    - description: "remove pdb usage"
+      change_function:
+        "setBreak": "'(lambda self: None)'"
