Minor spelling cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,9 +93,6 @@
         "co_argcount",
         "co_firstlineno",
         "co_kwonlyargcount",
-        "tp_descr_get",
-        "tp_descr_set",
-        "tp_alloc",
         "CO_NEWLOCALS",
         "CO_NOFREE",
         "co_posonlyargcount",
@@ -104,6 +101,10 @@
         "codesign",
         "compactify",
         "conda",
+        "CORO_CLOSED",
+        "CORO_CREATED",
+        "CORO_RUNNING",
+        "CORO_SUSPENDED",
         "cpython",
         "ctypes",
         "Cython",
@@ -136,11 +137,6 @@
         "iterkeys",
         "itervalues",
         "Kivy",
-        "pkglib",
-        "CORO_RUNNING",
-        "CORO_CLOSED",
-        "CORO_CREATED",
-        "CORO_SUSPENDED",
         "kwargs",
         "kwds",
         "libc",
@@ -151,8 +147,6 @@
         "mdef",
         "metaclass",
         "METH_NOARGS",
-        "tp_dealloc",
-        "tp_getset",
         "METH_VARARGS",
         "MSVC",
         "msys",
@@ -173,6 +167,7 @@
         "otool",
         "patchelf",
         "Pickler",
+        "pkglib",
         "Podman",
         "POSIX",
         "Py_DECREF",
@@ -206,13 +201,19 @@
         "sourcery",
         "ssizeargfunc",
         "stdlib",
+        "strchr",
         "sysexit",
         "sysflag",
         "ternaryfunc",
         "Tkinter",
+        "tp_alloc",
         "tp_basicsize",
+        "tp_dealloc",
+        "tp_descr_get",
+        "tp_descr_set",
         "tp_dictoffset",
         "tp_getattro",
+        "tp_getset",
         "tp_itemsize",
         "tp_iternext",
         "tp_richcompare",
